# tap-spreadsheets-anywhere

./: create_virtualenv.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
tap_spreadsheets_anywhere/: excel_handler.py  file_utils.py
tap_spreadsheets_anywhere/test/: test_config.py
