[tool.poetry]
name = "tap-spreadsheets-anywhere"
version = "0.2.0"
description = "Singer.io tap for extracting spreadsheet data from cloud storage"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3 :: Only"]
homepage = "https://github.com/ets/tap-spreadsheets-anywhere"
authors = ["Eric Simmerman"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
azure-storage-blob = ">=12.15.0"
boto3 = ">=1.26.103"
google-cloud-storage = ">=2.8.0"
openpyxl = ">=3.1.2"
paramiko = ">=3.1.0"
singer-python = ">=5.13.0"
smart-open = ">=6.3.0"
voluptuous = ">=0.13.1"
xlrd3 = ">=1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
