[tool.poetry]
name = "tap-spreadsheets-anywhere"
version = "0.2.0"
description = "Singer.io tap for extracting spreadsheet data from cloud storage"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3 :: Only"]
homepage = "https://github.com/ets/tap-spreadsheets-anywhere"
authors = ["Eric Simmerman"]

[tool.poetry.scripts]
tap-spreadsheets-anywhere = 'tap_spreadsheets_anywhere:main'

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
singer-python = ">=5.0.12"
smart-open = ">=2.1"
voluptuous = ">=0.10.5"
boto3 = ">=1.15.5"
google-cloud-storage = ">=2.7.0"
protobuf = ">=4.21.12"
openpyxl = "*"
xlrd = "*"
paramiko = "*"
azure-storage-blob = ">=12.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
